--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hello",
+  "homepage": "https://embryo83.github.io",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -7,6 +8,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js"
   },
